docs/source/examples/beginIsKeyword.good
beginIsKeyword.chpl:1: syntax error: near 'begin'
