docs/source/examples/beginIsKeyword.chpl
var begin = 1;
var end   = 10;
for n in begin..end {
  write(n);
}
writeln(".");
